Added Name to FormTemplate.proto, DS_Store to ignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,6 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+
+#Ignore MacOS .DS_Store files
+*.DS_Store
